# SolARModulePCL

./: .gitignore  CMakeLists.txt  JenkinsFile  README.adoc  README.md  SolARModulePCL.pri  SolARModulePCL.pro  bcom-SolARModulePCL.pc.in  packagedependencies-linux.txt  packagedependencies-win.txt  packagedependencies.txt  xpcf_SolARModulePCL_registry.xml
interfaces/: SolARICPNormalsPCL.h  SolARICPPCL.h  SolARModulePCL_traits.h  SolARPCFilterCentroidPCL.h  SolARPCFilterPCL.h  SolARPCLAPI.h  SolARPCLHelper.h  SolARPointCloudLoaderPCL.h
src/: SolARICPNormalsPCL.cpp  SolARICPPCL.cpp  SolARModulePCL.cpp  SolARPCFilterCentroidPCL.cpp  SolARPCFilterPCL.cpp  SolARPCLHelper.cpp  SolARPointCloudLoaderPCL.cpp
tests/SolARPointCloudLoader/: SolARPointCloudLoaderTest.pro  SolARPointCloudLoaderTest_conf.xml  bcom-SolARPointCloudLoader.pc.in  bcom-SolARPointCloudLoaderTest.pc  main.cpp
tests/SolARTestPCLPointCloudLoader/: SolARTestPCLPointCloudLoader.pro  SolARTestPCLPointCloudLoader_conf.xml  bcom-SolARTestPCLPointCloudLoader.pc.in  main.cpp  packagedependencies.txt
tests/SolARTest_ModulePCL_PointCloudLoader/: SolARTest_ModulePCL_PointCloudLoader.pro  SolARTest_ModulePCL_PointCloudLoader_conf.xml  bcom-SolARTestPCLPointCloudLoader.pc.in  main.cpp  packagedependencies.txt
tests/data/: bunny_10000_opencv.ply  frac_star.pcd  frac_star.ply
